# little-xtensor

./: CMakeLists.txt  README.md  azure-pipelines.yml
src/: example.cpp
